# host-proxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config-example.yaml  docker-compose.yaml  manifest
releases/linux/amd64/: host-proxy
releases/linux/amd64/v0.2.0/: host-proxy_linux_amd64_0.2.0
releases/mac/arm64/v0.1/: host-proxy  host-proxy_mac_arm64_0.1
releases/mac/arm64/v0.2.0/: host-proxy_mac_arm64_0.2.0
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  proxy.rs  resolver.rs
tests/: integration_tests.rs
