[package]
name = "host-proxy"
version = "0.1.0"
edition = "2021"
description = "A DNS bypass HTTP/HTTPS proxy server with configurable host-to-IP mappings"
authors = ["Jeroen"]
license = "MIT"
readme = "README.md"
keywords = ["proxy", "http", "https", "dns", "pingora"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Pingora - high performance proxy framework
pingora = { version = "0.6", features = ["proxy"] }
pingora-core = "0.6.0"
pingora-proxy = "0.6.0"
pingora-http = "0.6.0"
pingora-error = "0.6.0"
pingora-load-balancing = "0.6.0"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }
async-trait = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# File watching for hot-reload
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# Networking utilities
url = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# For hostname matching and HTTP handling
http = "1"
bytes = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "host-proxy"
path = "src/main.rs"
