[package]
name = "host-proxy"
version = "0.1.0"
edition = "2021"
description = "A DNS bypass HTTP/HTTPS proxy server with configurable host-to-IP mappings"
authors = ["Jeroen"]
license = "MIT"
readme = "README.md"
keywords = ["proxy", "http", "https", "dns", "forward-proxy"]
categories = ["network-programming", "web-programming"]

[dependencies]
# HTTP server and client
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-native-tls = "0.3"
native-tls = "0.2"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# File watching for hot-reload
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# Error handling
thiserror = "1"
anyhow = "1"

# For HTTP types
http = "1"
bytes = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "host-proxy"
path = "src/main.rs"
